// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Shippuden"
      key="Shippuden"
    />
    <GifGrid
      category="Demon Slayer"
      key="Demon Slayer"
    />
    <GifGrid
      category="Promised Neverland"
      key="Promised Neverland"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en <GifExpertApp /> debe de renderizarse correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
